# polsim

./: .clang-format  .clang_complete  .gitignore  Doxyfile  Makefile  README.md  StandardController.tpp  controller.cpp  controller.hpp  main.cpp  meson.build  pdp.cpp  pdp.hpp  simulation.cpp  simulation.hpp
docs/: Doxyfile.in  meson.build
include/polsim/: ExperimentalController.tpp  NPointController.tpp  StandardController.tpp  StandardController2.tpp  controller.hpp  pdp.hpp  simulation.hpp
src/: controller.cpp  main.cpp  meson.build  pdp.cpp  simulation.cpp
